# Republic-Bot

./: commands.py  dpy.py  main.py  pyproject.toml  ranks.json  server.py
CMDS/HONOR/: honor.py  honor_add.py  honor_del.py  honor_set.py
CMDS/MISC/: help.py  kill.py  restart.py
CMDS/MOD/: ban.py  kick.py  mute.py
DB/: database.json
