[tool.poetry]
name = "repl_python3_bot-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
qikdb = "^0.3.1"
ro-py = "^1.2.0"
roblox = "^1.2.0"
Flask = "^2.0.1"
node-py = "^0.0.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
